--- a/project.html
+++ b/project.html
@@ -1,44 +1,90 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>test</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Bootstrap -->
-<link href="./bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet" media="screen">
-    <div class="row">
-    <div class="span3">
-        <h2>Apple</h2>
-        <p>The apple is the pomaceous fruit of the apple tree, species Malus domestica in the rose family.</p>
-    </div>
-    <div class="span3">
-        <h2>Orange</h2>
-        <p>The orange (specifically, the sweet orange) is the fruit of the citrus Citrus × ​sinensis, species Citrus × ​sinensis in the family Rutaceae.</p>
-    </div>
-    <div class="span3">
-        <h2>Peach</h2>
-        <p>The peach, Prunus persica, is a deciduous tree, native to China and South Asia, where it was first cultivated.</p>
-    </div>
-    <div class="span3">
-        <h2>Pear</h2>
-        <p>The pear is any of several tree and shrub species of genus Pyrus, in the family Rosaceae.</p>
-    </div>
-</div>
- 
-<hr />
- 
- <!-- Another row, with two columns. -->
-<div class="row">
-    <div class="span6">
-        <h2>Cat</h2>
-        <p>The domestic cat (Felis catus or Felis silvestris catus) is a small, usually furry, domesticated, carnivorous mammal.</p>
-    </div>
-    <div class="span6">
-        <h2>Dog</h2>
-        <p>The domestic dog (Canis lupus familiaris), is a subspecies of the gray wolf (Canis lupus), a member of the Canidae family of the mammalian order Carnivora.</p>
-    </div>
-</div>
+	<head>
+		<title>test</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Bootstrap -->
+		<link href="./bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet" media="screen">
+		<ul class="nav nav-tabs">
+			<li class="active">
+				<a href="#homer" data-toggle="tab">Apple</a>
+			</li>
+			<li>
+				<a href="#marge" data-toggle="tab">Orange </a>
+			</li>
+			<li>
+				<a href="#grandpa" data-toggle="tab">Peach</a>
+			</li>
+		</ul>
 
-<script src="./js/jquerry.js"></script>
-<script src="./bootstrap/js/bootstrap.js"></script>
-</body>
+		<!-- The tab content. -->
+		<div id="my-tab-content" class="tab-content">
+
+			<div class="tab-pane active" id="homer">
+				<p>
+					Apple
+				</p>
+			</div>
+
+			<div class="tab-pane" id="marge">
+				<p>
+					Orange
+				</p>
+			</div>
+
+			<div class="tab-pane" id="grandpa">
+				<p>
+					Peach
+				</p>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="span3">
+				<h2>Apple</h2>
+				<p>
+					The apple is the pomaceous fruit of the apple tree, species Malus domestica in the rose family.
+				</p>
+			</div>
+			<div class="span3">
+				<h2>Orange</h2>
+				<p>
+					The orange (specifically, the sweet orange) is the fruit of the citrus Citrus × ​sinensis, species Citrus × ​sinensis in the family Rutaceae.
+				</p>
+			</div>
+			<div class="span3">
+				<h2>Peach</h2>
+				<p>
+					The peach, Prunus persica, is a deciduous tree, native to China and South Asia, where it was first cultivated.
+				</p>
+			</div>
+			<div class="span3">
+				<h2>Pear</h2>
+				<p>
+					The pear is any of several tree and shrub species of genus Pyrus, in the family Rosaceae.
+				</p>
+			</div>
+		</div>
+
+		<hr />
+
+		<!-- Another row, with two columns. -->
+		<div class="row">
+			<div class="span6">
+				<h2>Cat</h2>
+				<p>
+					The domestic cat (Felis catus or Felis silvestris catus) is a small, usually furry, domesticated, carnivorous mammal.
+				</p>
+			</div>
+			<div class="span6">
+				<h2>Dog</h2>
+				<p>
+					The domestic dog (Canis lupus familiaris), is a subspecies of the gray wolf (Canis lupus), a member of the Canidae family of the mammalian order Carnivora.
+				</p>
+			</div>
+		</div>
+
+		<script src="./js/jquerry.js"></script>
+		<script src="./bootstrap/js/bootstrap.js"></script>
+		</body>
 </html>
