--- a/test.html
+++ b/test.html
@@ -1,32 +1,49 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>first</title>
+<title>test</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Bootstrap -->
+<link href="./bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet" media="screen">
+<form id="localStorageTest" method="post" action="">
+    <label>Username:</label>
+    <input type="text" name="name" id="username" class="stored" value="" />
 
-	</head>
-	<body>
-		<p id="demo">
-			Click the button to get your coordinates:
-		</p>
-		<button onclick="getLocation()">
-			Try It
-		</button>
+    <label>Email:</label>
+    <input type="email" name="email" id="email" class="stored" value="" />
 
-		<script>
-			var x = document.getElementById("demo");
-			function getLocation() {
-				if (navigator.geolocation) {
-					navigator.geolocation.getCurrentPosition(showPosition);
-				} else {
-					x.innerHTML = "Geolocation is not supported by this browser.";
-				}
-			}
+    <label>Comment:</label>
+    <textarea name="message" id="comment" class="stored"> </textarea>
 
-			function showPosition(position) {
-				x.innerHTML = "Latitude: " + position.coords.latitude + "<br>Longitude: " + position.coords.longitude;
-			}
-		</script>
-		<script src="./js/app.js"></script>
+    <input type="submit" class="demo-button" value="Submit" />
+</form>
+<p id="showName">your name is: </p>
+<script src="http://code.jquery.com/jquery.js"></script>
+<script type="text/javascript">
+$(document).ready(function () {
+    function init() {
+        if (localStorage["username"]) {
+            $('#name').val(localStorage["username"]);
+        }
+        if (localStorage["email"]) {
+            $('#email').val(localStorage["email"]);
+        }
+        if (localStorage["comment"]) {
+            $('#comment').val(localStorage["message"]);
+        }
+    }
+    init();
+});
 
-	</body>
+$('.stored').keyup(function () {
+    localStorage[$(this).attr('username')] = $(this).val();
+});
+
+$('#localStorageTest').submit(function() {
+	$('#showName').text("Your name is : " + localStorage.username);
+ 	return false;
+});
+</script>
+<script src="./bootstrap/js/bootstrap.min.js"></script>
+</body>
 </html>
