--- a/formex.html
+++ b/formex.html
@@ -8,55 +8,101 @@
 		<script src="./js/jquerry.js"></script>
 		<script src="./bootstrap/js/bootstrap.js"></script>
 		<body>
-			<form id="localStorageTest" method="post" action="">
-				<label>Name:</label>
-				<input type="text" name="name" id="name" class="stored" value="" />
+			<script>
+				var db = createTable();
 
-				<label>Email:</label>
-				<input type="email" name="email" id="email" class="stored" value="" />
-
-				<label>Message:</label>
-				<textarea name="message" id="message" class="stored"></textarea>				
-
- <input type="submit" class="demo-button" value="Submit" />
-			</form>
-
-			<p id="showName">
-				
-			</p>
-			<p id= "showemail"></p>
-			<br>
-			<p id ="showmessage"></p>
-
-			<script src="http://code.jquery.com/jquery.js"></script>
-			<script type="text/javascript">
-				$(document).ready(function() {
-					function init() {
-						if (localStorage["name"]) {
-							$('#name').val(localStorage["name"]);
+				function getopenDb() {
+					try {
+						if (window.openDatabase) {
+							return window.openDatabase;
+						} else {
+							alert('No HTML5 support');
+							return undefined;
 						}
-						if (localStorage["email"]) {
-							$('#email').val(localStorage["email"]);
-						}
-						if (localStorage["message"]) {
-							$('#message').val(localStorage["message"]);
-						}
+					} catch (e) {
+						alert(e);
+						return undefined;
 					}
+				}
 
-					init();
-				});
+				function createTable() {
+					var openDB = getopenDb();
+					if (!openDB) {
+						return;
+					} else {
+						db = openDB('mydatabase', '1.0', 'my db', 2 * 1024 * 1024);
+						db.transaction(function(t) {
+							t.executeSql('CREATE TABLE IF NOT EXISTS myTable(id INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL DEFAULT "name", age INT NOT NULL);', [], null, null);
 
-				$('.stored').keyup(function() {
-					localStorage[$(this).attr('name')] = $(this).val();
-				});
+						});
+						selRows();
+						return db;
+					}
+				}
 
-				$('#localStorageTest').submit(function() {
-					$('#showName').text("Your name is : " + localStorage.name);
-					$('#showemail').text("your email is:" + localStorage.email);
-					$('#showmessage').text("MESSAGE:" + localStorage.message)
-					return false;
-				});
+				function insert() {
+					if (!db) {
+						return;
+					}
+					var name = document.getElementById("name").value;
+					var age = document.getElementById("age").value;
+
+					db.transaction(function(t) {
+						t.executeSql("INSERT INTO myTable('name','age') values('" + name + "'," + age + ");", [], null, null);
+						alert("Row Inserted!");
+						selRows();
+					});
+				}
+
+				function selRows() {
+
+					var q = "select * from myTable";
+
+					db.transaction(function(t) {
+						t.executeSql(q, null, function(t, data) {
+							var html = "<table border='1'><th><tr><td>ID</td><th><td>Name</td><td>Age</td></tr>";
+							for (var i = 0; i < data.rows.length; i++) {
+								html += "<table border ='1'><tr><td>" + data.rows.item(i).id + "</td><td>" + data.rows.item(i).name + "</td><td>" + data.rows.item(i).age + "</td></tr>";
+							}
+							html += "</table>";
+							var el = document.getElementById("main");
+							el.innerHTML = html;
+						});
+					});
+				}
+
+				function clearDB() {
+					if (!db) {
+						return;
+					}
+					if (confirm('Clear the entire table?')) {
+						db.transaction(function(t) {
+							t.executeSql('DELETE FROM myTable');
+						});
+						selRows();
+					}
+				}
+
 			</script>
-			<script src="./bootstrap/js/bootstrap.min.js"></script>
-		</body>
+
+	</head>
+	<body>
+		<fieldset>
+			<legend>
+				Web SQL Storage
+			</legend>
+			<h4>Insert Rows</h4>
+			<span><label for="name">Name: </label>
+				<input type="text" id="name" />
+			</span>
+			<span><label for="age">Age: </label>
+				<input type="text" id="age" />
+			</span>
+			<br />
+			<br />
+			<span> <a href="javascript:void(0);" class="btn" onclick="insert();">Insert</a> <a href="javascript:void(0);" class="btn" onclick="clearDB();">Clear</a> </span>
+		</fieldset>
+		<div id="main"></div>
+	</body>
 </html>
+
